--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -6,22 +6,6 @@ repo: Cyberflix-Status
 sites:
   - name: Cyberflix Main Site
     url: https://www.cyberflix.io
-    icon: https://archive.cyberflix.io/images/logos/SVGs/Logo.svg
-  - name: Cyberflix Backend
-    url: https://backend.cyberflix.io
-    icon: https://archive.cyberflix.io/images/logos/SVGs/Backend.svg
-  - name: Cyberflix Jellyfin
-    url: https://watch.cyberflix.io
-    icon: https://archive.cyberflix.io/images/logos/SVGs/Jellyfin.svg
-  - name: Cyberflix Request System
-    url: https://requests.cyberflix.io
-    icon: https://archive.cyberflix.io/images/logos/SVGs/Jellyseerr.svg
-  - name: Cyberflix Accounts
-    url: https://accounts.cyberflix.io
-    icon: https://archive.cyberflix.io/images/logos/SVGs/Accounts.svg
-  - name: Cyberflix Speedtest
-    url: https://speedtest.cyberflix.io
-    icon: https://archive.cyberflix.io/images/logos/SVGs/Speedtest.svg
   - name: Cyberflix Docs
     url: https://docs.cyberflix.io
     icon: https://archive.cyberflix.io/images/logos/SVGs/Docs.svg
@@ -39,7 +23,7 @@ status-website:
   name: Cyberflix - Status
   theme: dark
   introTitle: "<img src='https://archive.cyberflix.io/images/titles/Cyberflix-Status-Light.png' alt='' style='margin-left: auto;margin-right: auto;margin-top: 1em;display: block;width: 100%;'>"
-  introMessage: Welcome to the Cyberflix Status page. Here you will find the status for the entire media center.
+  introMessage: The Cyberflix Project has been indefinetly suspended following the permanent suspension of Cyberflix Media's Google Account. Please visit cyfx.io for more information.
   navbar:
     - title: Status
       href: /
@@ -47,6 +31,6 @@ status-website:
       href: https://github.com/$OWNER/$REPO
   css: ":root {--card-background-color: #161b22;--card-border-color: #161b22;--down-border-left-color: red;--up-border-left-color: limegreen;}body {background: url(https://archive.cyberflix.io/images/backgrounds/Main-Background.png); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; -webkit-background-size: auto, cover; -moz-background-size: auto, cover; -o-background-size: auto, cover;} nav {display: none;} .icon.svelte-14gfn20.svelte-14gfn20.svelte-14gfn20 {height: 27px;}::-webkit-scrollbar {width: 5px;}::-webkit-scrollbar-track {background: #3B3B3B;}::-webkit-scrollbar-thumb {background: #888888; border-radius: 10px;}::-webkit-scrollbar-thumb:hover {background: #888888;}"
 i18n:
-  footer: Copyright © 2022 Cyberflix Media. All rights reserved.
+  footer: Copyright © 2024 Cyberflix Media. All rights reserved.
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
